--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,7 @@ header {
     border-top: solid 2px #d4d4d4;
     border-bottom: solid 2px #d4d4d4;
     padding: 15px 0 30px 0;
+    font-size: clamp(6px, 1vw, 15px);
 }
 
 .news-item {
@@ -131,17 +132,16 @@ header {
 }
 
 .news-link__date {
-    margin-right: 35px;
+    margin-right: 2em;
 }
 
 .news-link__icon {
-    margin-right: 30px;
+    margin-right: 2em;
     padding: 0 1em;
     text-align: center;
     color: #fff;
     background-color: #b31667;
-    border-radius: 30px;
-    font-size: 14px;
+    border-radius: 100px;
     text-wrap: nowrap;
 }
 
